# Twist

./: .gitignore  CMakeLists.txt  License.txt  Readme.md  Readme.md.txt  Readme.txt
compiler/: builder.h  commandline.h  enums.h  error.h  main.cpp  module.h  parser.h  platform.h  settings.h  source_parser.h  twist.c++  type.h  types.h  utility.h
compiler/source/: AST.h  begin.h  error.h  main.cpp  parser_state.h  scope.h  types.h  utility.h
demo/: hello_thread.ct  hello_world.ct  hello_world.t
runtime/math/: sqrt.ll
spec/: Twist.tex  ctwist.tex
